force-app/main/default/objects/Semantic_Proposal__c/Semantic_Proposal__c.object-meta.xml
<CustomObject>
    <label>Semantic Proposal</label>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>Semantic Proposal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Semantic Proposals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>