force-app/main/default/objects/Semantic_Proposal__c/fields/DLO_Name__c.field-meta.xml
<CustomField>
    <fullName>DLO_Name__c</fullName>
    <externalId>true</externalId>
    <label>DLO Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>