force-app/main/default/objects/Semantic_Proposal__c/fields/Proposed_Mappings_JSON__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Mappings_JSON__c</fullName>
    <label>Proposed Mappings JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>