force-app/main/default/objects/Semantic_Proposal__c/fields/Sample_Data_Payload__c.field-meta.xml
<CustomField>
    <fullName>Sample_Data_Payload__c</fullName>
    <label>Sample Data Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>