force-app/main/default/objects/Semantic_Proposal__c/fields/Suggested_DMO__c.field-meta.xml
<CustomField>
    <fullName>Suggested_DMO__c</fullName>
    <label>Suggested DMO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>